# termalign

./: README.md  main.py  prueba.py  pyproject.toml  requirements.txt  table.py
test/: test_core.py  test_formatter.py  test_table.py  test_utils.py
textalign/: core.py  formatter.py  table.py  utils.py
